--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -2094,7 +2094,7 @@ input[type=number] {
   margin-bottom: 0.8em;
 }
 
-.definition-group.dimensions, .definition-group.information {
+.definition-group.characteristics, .definition-group.information {
   background: #d5e8f3;
 }
 
