--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -61,7 +61,7 @@
     margin-bottom: 0.8em;
   }
 
-  &.dimensions, &.information {
+  &.characteristics, &.information {
     background: $light-blue-25;
   }
 }
