Tweaks to download page
- Consistent capitalisation
- CSS

--- a/app/views/performance/index.html
+++ b/app/views/performance/index.html
@@ -195,7 +195,7 @@
           </label>
           <label class="block-label" for="characteristic-2">
             <input id="characteristic-2" name="characteristics" type="checkbox" value="agency-body">
-            Agency/Body
+            Agency/body
           </label>
           <label class="block-label" for="characteristic-3">
             <input id="characteristic-3" name="characteristics" type="checkbox" value="category">
@@ -203,19 +203,19 @@
           </label>
           <label class="block-label" for="characteristic-4">
             <input id="characteristic-4" name="characteristics" type="checkbox" value="transactions-dependent-on">
-            Transactions Dependent On
+            Transactions dependent on
           </label>
           <label class="block-label" for="characteristic-5">
             <input id="characteristic-5" name="characteristics" type="checkbox" value="interaction-components">
-            Interaction Components
+            Interaction components
           </label>
           <label class="block-label" for="characteristic-6">
             <input id="characteristic-6" name="characteristics" type="checkbox" value="gaap-components">
-            GaaP Components
+            GaaP components
           </label>
           <label class="block-label" for="characteristic-7">
             <input id="characteristic-7" name="characteristics" type="checkbox" value="manual-activity">
-            Manual Activity
+            Manual activity
           </label>
         </fieldset>
 
@@ -226,19 +226,19 @@
 
           <label class="block-label" for="fact-1">
             <input id="fact-1" name="metrics" type="checkbox" value="started-transactions">
-            Started Transactions
+            Started transactions
           </label>
           <label class="block-label" for="fact-2">
             <input id="fact-2" name="metrics" type="checkbox" value="completed-transactions">
-            Completed Transactions
+            Completed transactions
           </label>
           <label class="block-label" for="fact-3">
             <input id="fact-3" name="metrics" type="checkbox" value="total-processing-cost">
-            Total Processing Cost
+            Total processing cost
           </label>
           <label class="block-label" for="fact-4">
             <input id="fact-4" name="metrics" type="checkbox" value="cost-pct-operational-spend">
-            Cost % Operational Spend
+            Cost % operational spend
           </label>
         </fieldset>
 
@@ -262,32 +262,32 @@
     <h3>Characteristics</h3>
     <dl>
       <dt>Department</dt><dd>Morbi ac velit at orci consectetur dignissim sed et odio.</dd>
-      <dt>Agency/Body</dt><dd>Donec in dapibus libero, et tempor neque.</dd>
+      <dt>Agency/body</dt><dd>Donec in dapibus libero, et tempor neque.</dd>
       <dt>Category</dt><dd>Nullam lacinia neque nec dolor consequat finibus.</dd>
-      <dt>Frequency of Interaction</dt><dd>Duis quis placerat sapien.</dd>
-      <dt>Transactions Dependent On</dt><dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</dd>
-      <dt>Interaction Components</dt><dd>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</dd>
-      <dt>GaaP Components</dt><dd>Etiam vitae nisl posuere, efficitur nibh nec, mattis mi.</dd>
-      <dt>Manual Activity</dt><dd>Nunc in erat ac metus auctor rhoncus.</dd>
+      <dt>Frequency of interaction</dt><dd>Duis quis placerat sapien.</dd>
+      <dt>Transactions dependent on</dt><dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</dd>
+      <dt>Interaction components</dt><dd>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</dd>
+      <dt>GaaP components</dt><dd>Etiam vitae nisl posuere, efficitur nibh nec, mattis mi.</dd>
+      <dt>Manual activity</dt><dd>Nunc in erat ac metus auctor rhoncus.</dd>
     </dl>
   </div>
 
   <div class="group definition-group metrics">
     <h3>Metrics</h3>
     <dl>
-      <dt>Started Transactions</dt><dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</dd>
-      <dt>Completed Transactions</dt><dd>Nullam ac elit at leo egestas congue.</dd>
-      <dt>Total Processing Cost</dt><dd>Duis quis placerat sapien.</dd>
-      <dt>Cost % Operational Spend</dt><dd>Vivamus sit amet mi vel neque mollis feugiat.</dd>
+      <dt>Started transactions</dt><dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</dd>
+      <dt>Completed transactions</dt><dd>Nullam ac elit at leo egestas congue.</dd>
+      <dt>Total processing cost</dt><dd>Duis quis placerat sapien.</dd>
+      <dt>Cost % operational spend</dt><dd>Vivamus sit amet mi vel neque mollis feugiat.</dd>
     </dl>
   </div>
 
   <div class="group definition-group information">
     <h3>Background information</h3>
     <dl>
-      <dt>User Need</dt><dd>Sed pharetra, quam sit amet dignissim luctus, lacus enim rutrum libero, a viverra odio lorem sed erat.</dd>
+      <dt>User need</dt><dd>Sed pharetra, quam sit amet dignissim luctus, lacus enim rutrum libero, a viverra odio lorem sed erat.</dd>
       <dt>URL</dt><dd>Duis quis placerat sapien.</dd>
-      <dt>Data Curator</dt><dd>Morbi ac velit at orci consectetur dignissim sed et odio.</dd>
+      <dt>Data curator</dt><dd>Morbi ac velit at orci consectetur dignissim sed et odio.</dd>
     </dl>
   </div>
 
