Changes to download and new transaction pages
After review with Katie and TingTing on 26th April

--- a/app/views/performance/index.html
+++ b/app/views/performance/index.html
@@ -14,17 +14,15 @@
         Download data about the performance of transactions used to deliver Government services.
       </p>
 
-      <p>Citizens make use of Government services by interacting with one or more transactions through online or offline channels. Each transaction will result in a change to the information that Government holds about an individual, legal entity or physical item.</p>
+      <p>Citizens make use of Government services by interacting with one or more transactions through online or offline channels. A transaction is the whole process that a person needs to go through to create, update, or delete the information that Government holds about an individual, legal entity or physical item.</p>
     </div>
   </div>
 
-  <p>Last updated: 22nd April 2016</p>
-
-  <p><a href="https://docs.google.com/spreadsheets/d/18zlIlwnFscJthjmn1i25-y9xwXvOBf25erEZ7KBheb8/edit#gid=0" target="_blank" class="button button-start">Download all data</a></p>
+  <p>Data last updated: 26th April 2016</p>
 
   <details>
 
-    <summary><span class="summary">Download filtered data</span></summary>
+    <summary><span class="summary">Download selected data</span></summary>
 
     <div class="panel panel-border-narrow">
 
@@ -32,7 +30,7 @@
 
         <!-- Transactions filter -->
         <fieldset>
-          <legend>Choose transactions to include:</legend>
+          <legend>Select transactions to include:</legend>
 
           <label for="all-transactions" class="block-label">
             <input id="all-transactions" type="radio" name="transactions" value="all-transactions">
@@ -79,7 +77,7 @@
         <br>
         <!-- Reporting periods filter -->
         <fieldset>
-          <legend>Choose periods to report on:</legend>
+          <legend>Select periods to report on:</legend>
 
           <label for="reporting-quarterly" class="block-label" data-target="select-quarters-panel">
             <input id="reporting-quarterly" type="radio" name="reporting-period" value="quarterly">
@@ -114,7 +112,7 @@
           </label>
 
           <div class="panel panel-border-narrow js-hidden" id="choose-year-start-panel">
-            <p class="form-hint">Choose a start month of a 12-month period</p>
+            <p class="form-hint">Select a start month of a 12-month period</p>
             <label for="year-jan-dec" class="block-label" data-target="select-years-jan-dec-panel">
               <input id="year-jan-dec" type="radio" name="year-range" value="jan-dec">
               January
@@ -246,15 +244,17 @@
 
     </div>
 
-    <p><a href="https://docs.google.com/spreadsheets/d/1fZM4xJduzXmfCGlH1wEgMiem8uz-sOV86FsOwWxHjiY/edit#gid=0" target="_blank" class="button button-start">Download filtered data</a></p>
+    <p><a href="https://docs.google.com/spreadsheets/d/1fZM4xJduzXmfCGlH1wEgMiem8uz-sOV86FsOwWxHjiY/edit#gid=0" target="_blank" class="button button-start">Download selected data</a></p>
 
   </details>
+
+  <p><a href="https://docs.google.com/spreadsheets/d/18zlIlwnFscJthjmn1i25-y9xwXvOBf25erEZ7KBheb8/edit#gid=0" target="_blank" class="button button-start">Download all data</a></p>
 
   <div class="grid-row">
     <div class="column-two-thirds">
       <h2 class="heading-medium">About the data</h2>
 
-      <p>The data is provided at transaction-level and can be analysed and compared using one or more <em>characteristics</em> and <em>metrics</em>. <em>Background information</em> is also provided to help you understand what a transaction does, where it can be found, and who is responsible for providing data about it.</p>
+      <p>The data is provided at transaction-level and can be analysed and compared using one or more <em>characteristics</em> and <em>metrics</em>. <em>Supporting information</em> is also provided to help you understand what a transaction does, where it can be found, and who is responsible for providing data about it.</p>
     </div>
   </div>
 
@@ -283,11 +283,11 @@
   </div>
 
   <div class="group definition-group information">
-    <h3>Background information</h3>
+    <h3>Supporting information</h3>
     <dl>
       <dt>User need</dt><dd>Sed pharetra, quam sit amet dignissim luctus, lacus enim rutrum libero, a viverra odio lorem sed erat.</dd>
       <dt>URL</dt><dd>Duis quis placerat sapien.</dd>
-      <dt>Data curator</dt><dd>Morbi ac velit at orci consectetur dignissim sed et odio.</dd>
+      <dt>Contact for data</dt><dd>Morbi ac velit at orci consectetur dignissim sed et odio.</dd>
     </dl>
   </div>
 
