Change copy for 'About the data'

--- a/app/views/performance/index.html
+++ b/app/views/performance/index.html
@@ -254,7 +254,11 @@
     <div class="column-two-thirds">
       <h2 class="heading-medium">About the data</h2>
 
-      <p>The data is provided at transaction-level and can be analysed and compared using one or more <em>characteristics</em> and <em>metrics</em>. <em>Supporting information</em> is also provided to help you understand what a transaction does, where it can be found, and who is responsible for providing data about it.</p>
+      <p>The data is provided as a <a href="http://en.wikipedia.org/wiki/Comma-separated_values">CSV</a> file. A line in the file represents one transaction and is made up of data items, each of which is either a <em>characteristic</em>, <em>metric</em> or some other <em>supporting information</em> about the transaction.</p>
+
+      <p>Characteristics are useful for sorting, filtering and aggregating data in the file, and for comparing metrics across transactions on a like-for-like basis.</p>
+      <p>Here is a list of the data items that will be provided for each transaction when you choose to download all data:
+      </p>
     </div>
   </div>
 
