Add transaction types and service themes to form

--- a/app/views/performance/setup/transaction/new.html
+++ b/app/views/performance/setup/transaction/new.html
@@ -108,13 +108,25 @@
         <label class="form-label" for="type">Type</label>
         <select class="form-control" id="type">
           <option value=""></option>
-          <option value="booking-events-and-resources">Booking events and resources</option>
-          <option value="making-a-payment">Making a payment</option>
-          <option value="ordering-goods">Ordering goods</option>
-          <option value="registering">Registering</option>
-          <option value="requesting-a-licence-or-consent">Requesting a licence or consent</option>
-          <option value="requesting-benefits-payments-or-loans">Requesting benefits, payments or loans</option>
-          <option value="requesting-information">Requesting information</option>
+          <option value="appeal-a-decision">Appeal a decision</option>
+          <option value="apply-for-an-award">Apply for an award</option>
+          <option value="apply-for-benefits">Apply for benefits/personal financial support</option>
+          <option value="apply-for-reimbursement">Apply for/claim reimbursement</option>
+          <option value="apply-for-funding">Apply for funding</option>
+          <option value="apply-for-permission">Apply for permission</option>
+          <option value="book-a-time">Book a time</option>
+          <option value="buy-physical-item">Buy a physical item</option>
+          <option value="check-private-data">Check private data about someone else</option>
+          <option value="create-content">Create content</option>
+          <option value="delegate-responsibility">Delegate responsibility</option>
+          <option value="exchange-ownership">Exchange ownership</option>
+          <option value="pay-government">Pay goverment</option>
+          <option value="pay-to-use-public-asset">Pay to use a public asset</option>
+          <option value="register-change-of-circumstances">Register a change of circumstances</option>
+          <option value="register-physical-item-or-activity">Register a physical item or activity</option>
+          <option value="register-yourself">Register yourself (or someone you represent)</option>
+          <option value="report-a-concern">Report a concern or possible crime</option>
+          <option value="submit-records">Submit records</option>
         </select>
       </div>
 
@@ -125,6 +137,18 @@
           <option value=""></option>
           <option value="business">Business</option>
           <option value="coming-to-the-uk">Coming to the UK</option>
+          <option value="crime-justice-and-law">Crime, justice and law</option>
+          <option value="defence">Defence</option>
+          <option value="education">Education</option>
+          <option value="environment">Environment</option>
+          <option value="going-being-abroad">Going/being abroad</option>
+          <option value="government">Government</option>
+          <option value="health-and-social-care">Health and social care</option>
+          <option value="housing-local-and-community">Housing, local and community</option>
+          <option value="international">International</option>
+          <option value="money">Money</option>
+          <option value="transport">Transport</option>
+          <option value="work">Work</option>
         </select>
       </div>
     </fieldset>
