Tweaks to definitions
Following discussion with Roxanne.

--- a/app/views/performance/index.html
+++ b/app/views/performance/index.html
@@ -204,8 +204,8 @@
             Transactions dependent on
           </label>
           <label class="block-label" for="characteristic-5">
-            <input id="characteristic-5" name="characteristics" type="checkbox" value="interaction-components">
-            Interaction components
+            <input id="characteristic-5" name="characteristics" type="checkbox" value="key-components">
+            Key components
           </label>
           <label class="block-label" for="characteristic-6">
             <input id="characteristic-6" name="characteristics" type="checkbox" value="gaap-components">
@@ -275,7 +275,7 @@
       <dt>Category</dt><dd>Transactions are categorised by type and by service.</dd>
       <dt>Frequency of interaction</dt><dd>How often the transaction is accessed by a citizen.</dd>
       <dt>Transactions dependent on</dt><dd>Other transactions which must be completed before the transaction can be completed.</dd>
-      <dt>Interaction components</dt><dd>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</dd>
+      <dt>Key components</dt><dd>Key components used in the delivery of the transaction.</dd>
       <dt>GaaP components</dt><dd>Government as a Platform components used in the delivery of the transaction, if any.</dd>
       <dt>Manual activity</dt><dd>Indicates whether the transaction requires manual activity in the back office.</dd>
     </dl>
@@ -294,8 +294,8 @@
   <div class="group definition-group information">
     <h3>Supporting information</h3>
     <dl>
-      <dt>User need</dt><dd>User need met by this transaction.</dd>
-      <dt>URL</dt><dd>URL of the transaction's start page or home page</dd>
+      <dt>Description</dt><dd>Description of the transaction.</dd>
+      <dt>URL</dt><dd>URL of the transaction's start page or home page.</dd>
       <dt>Contact for data</dt><dd>Name and email of person responsible for the data.</dd>
     </dl>
   </div>
