--- a/app/views/performance/index.html
+++ b/app/views/performance/index.html
@@ -232,11 +232,11 @@
           </label>
           <label class="block-label" for="fact-3">
             <input id="fact-3" name="metrics" type="checkbox" value="total-processing-cost">
-            Total processing cost
+            Total operating cost
           </label>
           <label class="block-label" for="fact-4">
             <input id="fact-4" name="metrics" type="checkbox" value="cost-pct-operational-spend">
-            Cost % operational spend
+            % department operating cost
           </label>
         </fieldset>
 
