--- a/app/views/performance/setup/transaction/new.html
+++ b/app/views/performance/setup/transaction/new.html
@@ -38,11 +38,11 @@
       <input type="text" class="form-control" id="url">
     </div>
 
-    <!-- User need -->
+    <!-- Description -->
     <div class="form-group">
-      <label class="form-label-bold" for="user-need">User need</label>
-      <p class="form-hint">User need met by this transaction</p>
-      <textarea class="form-control" id="user-need"></textarea>
+      <label class="form-label-bold" for="description">Description</label>
+      <p class="form-hint">Description of the transaction</p>
+      <textarea class="form-control" id="description"></textarea>
     </div>
 
     <!-- Department -->
@@ -199,11 +199,11 @@
       </fieldset>
     </div>
 
-    <!--  Interaction components -->
+    <!--  Key components -->
     <div class="form-group">
       <fieldset>
-        <legend class="form-label-bold">Interaction components</legend>
-        <p class="form-hint">Interaction components that make up the transaction</p>
+        <legend class="form-label-bold">Key components</legend>
+        <p class="form-hint">Key components used in the delivery of the transaction</p>
 
         <label for="eligibility" class="block-label">
           <input type="checkbox" name="interaction-component" value="eligibility" id="eligibility">
