--- a/app/views/performance/index.html
+++ b/app/views/performance/index.html
@@ -194,7 +194,7 @@
           </label>
           <label class="block-label" for="fact-2">
             <input id="fact-2" name="metrics" type="checkbox" value="completed-transactions">
-            Number of times the transaction was completed with a successful outcome
+            Number of times the transaction was completed with an outcome
           </label>
           <label class="block-label" for="fact-3">
             <input id="fact-3" name="metrics" type="checkbox" value="total-processing-cost">
@@ -285,7 +285,7 @@
     <h3>Metrics</h3>
     <dl>
       <dt>Started transactions</dt><dd>How many times the transaction was started during a time period.</dd>
-      <dt>Completed transactions</dt><dd>How many times the transaction was completed successfully during a time period.</dd>
+      <dt>Completed transactions</dt><dd>How many times the transaction was completed with an outcome during a time period.</dd>
       <dt>Total operating cost</dt><dd>Total operating cost of meeting the demand for the transaction during a time period (excluding fixed costs).</dd>
       <dt>% department operating cost </dt><dd>Total operating cost of the transaction as a percentage of the total operating cost of its department during a time period (excluding fixed costs).</dd>
     </dl>
